--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Login</title>
+    <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
-$END$
+
+<div class  = "main">
+    <div class = "card">
+        <h1 class = "card-header">Login</h1>
+        <form id = "login-form" class = "login-user-fields">
+            <div class = "field-wrapper">
+                <h2>Username</h2>
+                <input class = "field" type = "text" id = "username-input" placeholder="Username">
+            </div>
+            <div class = "field-wrapper">
+                <h2>Password</h2>
+                <input class = "field" type = "text" id = "password-input" placeholder="Password">
+            </div>
+            <button type="submit">Submit</button>
+        </form>
+    </div>
+</div>
+
+
+<script src = "js/login.js"></script>
 </body>
 </html>
