--- a/src/main/webapp/dashboard.html
+++ b/src/main/webapp/dashboard.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <script src = "js/dashboard.js"></script>
 </head>
 <body>
-$END$
+    <h1>Dashboard</h1>
+
+    <label for="item-name">Item name</label>
+    <input type = "text" id = "item-name" placeholder="New item">
+    <label for="item-url">Item url</label>
+    <input type = "text" id = "item-url" placeholder="url">
+
+    <button onClick = "addEntry()"> Submit </button>
+    <button onClick = "loadWishlist()"> Reload </button>
+
+    <table style = "width:100%" id = "wishlist">
+        <tr>
+            <th> Item </th>
+            <th> Link </th>
+        </tr>
+
+    </table>
+
 </body>
 </html>
